@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.2.22-cur, done by cs@nop.
--;-;-;2022-02-22 14:21:28, took 00:07:46, with 100 workers, on 2726 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-02-22 14:50:19, took 00:07:27, with 100 workers, on 2730 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -746,6 +746,10 @@ http://sources.nop.hu/cfg/crypt-sgt16.tst;crypt-sgt16.tst;success;sgt over macse
 http://sources.nop.hu/cfg/crypt-sgt17.tst;crypt-sgt17.tst;success;sgt over macsec vlan encapsulation
 http://sources.nop.hu/cfg/crypt-sgt18.tst;crypt-sgt18.tst;success;sgt hairpin encapsulation
 http://sources.nop.hu/cfg/crypt-sgt19.tst;crypt-sgt19.tst;success;no sgt ethernet encapsulation
+http://sources.nop.hu/cfg/crypt-sgt20.tst;crypt-sgt20.tst;success;sgt encapsulation with ingress allow
+http://sources.nop.hu/cfg/crypt-sgt21.tst;crypt-sgt21.tst;success;sgt encapsulation with egress allow
+http://sources.nop.hu/cfg/crypt-sgt22.tst;crypt-sgt22.tst;success;sgt encapsulation with ingress forbid
+http://sources.nop.hu/cfg/crypt-sgt23.tst;crypt-sgt23.tst;success;sgt encapsulation with egress forbid
 http://sources.nop.hu/cfg/crypt-skip01.tst;crypt-skip01.tst;success;skip over ipv4
 http://sources.nop.hu/cfg/crypt-skip02.tst;crypt-skip02.tst;success;skip over ipv6
 http://sources.nop.hu/cfg/crypt-skip03.tst;crypt-skip03.tst;success;skip over skip
