@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.22-cur, done by cs@nop.<br/>
-tested: 2022-02-22 14:21:28, took 00:07:46, with 100 workers, on 2726 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-02-22 14:50:19, took 00:07:27, with 100 workers, on 2730 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -759,6 +759,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt17.tst">crypt-sgt17.tst</a></td><td>success</td><td>sgt over macsec vlan encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt18.tst">crypt-sgt18.tst</a></td><td>success</td><td>sgt hairpin encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt19.tst">crypt-sgt19.tst</a></td><td>success</td><td>no sgt ethernet encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt20.tst">crypt-sgt20.tst</a></td><td>success</td><td>sgt encapsulation with ingress allow</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt21.tst">crypt-sgt21.tst</a></td><td>success</td><td>sgt encapsulation with egress allow</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt22.tst">crypt-sgt22.tst</a></td><td>success</td><td>sgt encapsulation with ingress forbid</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/crypt-sgt23.tst">crypt-sgt23.tst</a></td><td>success</td><td>sgt encapsulation with egress forbid</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip01.tst">crypt-skip01.tst</a></td><td>success</td><td>skip over ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip02.tst">crypt-skip02.tst</a></td><td>success</td><td>skip over ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/crypt-skip03.tst">crypt-skip03.tst</a></td><td>success</td><td>skip over skip</td></tr>
